# shiibot_rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  dofigen.yml
src/: commands.rs  commands_timezone.rs  constants.rs  db.rs  handlers.rs  main.rs  models.rs  schedule.rs
src/commands/: birthday.rs  lobby.rs  mod.rs  timezone.rs
src/database/: birthday.rs  lobby.rs  migrations.rs  mod.rs  schedule.rs  settings.rs
src/handlers/: birthday.rs  channel.rs  interaction.rs  mod.rs  voice.rs
src/schedule/: birthday_tasks.rs  manager.rs  mod.rs  types.rs  utils.rs
src/services/: birthday_service.rs  mod.rs
src/utils/: channel_utils.rs  collection_utils.rs  datetime.rs  message_formatter.rs  messages.rs  mod.rs  permissions.rs  role_logic.rs  schedule_utils.rs  string_utils.rs  timezone.rs  validation.rs
