[package]
name = "shiibot_rs"
version = "0.1.0"
edition = "2024"
description = "A Discord bot for managing temporary voice channels"
license = "MIT"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "cache", "model", "rustls_backend"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dashmap = "6.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"
